--- a/index2.html
+++ b/index2.html
@@ -3,14 +3,14 @@
 <head>
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <title>newGitTest</title>
+          <title>secondGit</title>
 </head>
 <body>
           <div>
                     <ul>
-                              <li>bricks</li>
-                              <li>mortar</li>
-                              <li>sand</li>
+                              <li>Abel</li>
+                              <li></li>
+                              <li></li>
                     </ul>
           </div>
 </body>
